--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,10 @@
             android:exported="false"/>
 
         <activity
+            android:name=".ProfessorHomeActivity"
+            android:exported="false"/>
+
+        <activity
             android:name=".AttendanceActivity"
             android:exported="false"
             android:label="Attendance" />
