--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,8 +56,7 @@
 
         <activity
             android:name=".ViewCoursesActivity"
-            android:exported="false"
-            android:label="View Courses" />
+            android:exported="false" />
 
         <activity
             android:name=".AttendanceActivity"
