Added MyScheduleActivity to the manifest

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,6 +59,10 @@
             android:exported="false" />
 
         <activity
+            android:name=".MyScheduleActivity"
+            android:exported="false" />
+
+        <activity
             android:name=".AttendanceActivity"
             android:exported="false"
             android:label="Attendance" />
