Updated manifest and professorhomeactivity with button action

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -76,6 +76,10 @@
             android:name=".MarkAttendanceActivity"
             android:exported="false" />
 
+        <activity
+            android:name=".ViewAttendanceActivity"
+            android:exported="false" />
+
     </application>
 
 </manifest>
