--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Oct 30 12:22:37 EDT 2025
-sdk.dir=C\:\\Users\\User\\AppData\\Local\\Android\\Sdk
+#Wed Nov 05 19:08:21 EST 2025
+sdk.dir=/Users/steven/Library/Android/sdk
